# discord-support-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yml
content/diagnose/: app.yaml  aux.yaml  display-dead.yaml
content/faq/: app-connect.yaml  aux-battery.yaml  b-error-codes.yaml  battery-errors.yaml  cb-battery.yaml  dc-converter-safety.yaml  display-repair.yaml  e-error-codes.yaml  ecu-defect.yaml  engine-errors.yaml  firmware.yaml  hard-reset.yaml  kickstand.yaml  librescoot-alarm.yaml  librescoot-bluetooth.yaml  librescoot-changes.yaml  librescoot-cloud.yaml  librescoot-dual-battery.yaml  librescoot-emergency-start.yaml  librescoot-fault-codes.yaml  librescoot-handbook.yaml  librescoot-installer-troubles.yaml  librescoot-intro.yaml  librescoot-keycards.yaml  librescoot-lsc.yaml  librescoot-metro-emco.yaml  librescoot-navigation.yaml  librescoot-platforms.yaml  librescoot-post-install.yaml  librescoot-revert.yaml  librescoot-update-channels.yaml  librescoot-update-mode.yaml  librescoot-updates.yaml  librescoot-versionsbox.yaml  official-app.yaml  service-partner.yaml  spare-parts.yaml  water-damage-mdb.yaml
content/forum_welcome/: support.md
content/glossary/: aux.yaml  cbb.yaml  dbc.yaml  ecu.yaml  hauptakku.yaml  hibernate.yaml  keycard.yaml  librescoot.yaml  lsc.yaml  mdb.yaml  nrf.yaml  ota.yaml  redis.yaml  scooteros.yaml  sunshine.yaml  ums.yaml  valhalla.yaml
content/howto/: ask.md
content/welcome/: de.md  en.md
tests/: test_content.py  test_i18n.py  test_prefs.py
(+16 files in other folders)
